--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "schema-form-ngflow",
+  "name": "angular-schema-form-ngflow",
   "version": "0.1.0",
   "description": "ng-flow add-on for schema form",
   "scripts": {
@@ -30,5 +30,8 @@
     "sinon": "^1.9.0",
     "sinon-chai": "^2.5.0",
     "streamqueue": "0.0.5"
+  },
+  "dependencies": {
+    "gulp-webserver": "^0.9.0"
   }
 }
